# proManage

./: .gitignore  GC_CLI_Deploy.md  README.md  REFERRAL_IMPLEMENTATION.md  UNRAID_DOCKERHUB_IMPORT.md  docker-compose.prod.yml  docker-compose.unraid.yml  docker-compose.yml  env.example  growthplan.md  package-lock.json  startbe.bat  startfe.bat
backend/: .dockerignore  .htaccess  DATABASE_FIX_SUMMARY.md  DATABASE_MAINTENANCE.md  Dockerfile  EMAIL_MONITORING_SETUP.md  PASSENGER_DEPLOY.md  README_SCRAPER_TESTING.md  app.json  digi_pdf2txt.txt  docker-entrypoint.sh  ebloc_pdf2txt.txt  engie_pdf2txt.txt  passenger_wsgi.py  promanage.db  promanage.db-shm  promanage.db-wal  pyproject.toml  requirements.txt  restart.sh  restartBE.ps1  test_output.txt  test_patterns.py  test_scraper.py  vodafone_pdf_text.txt
backend/app/: auth.py  contract_expiry_checker.py  database.py  database_mysql.py  database_postgresql.py  database_sqlite.py  ebloc_scraper.py  email_monitor.py  email_scraper.py  email_sender.py  hidroelectrica_api.py  incarca_service.py  limits.py  main.py  models.py  paths.py  pdf_analyzer.py  pdf_parser.py  text_pattern_extractor.py  web_scraper.py  web_scraper_sync.py
backend/extraction_patterns/: digi.json  ebloc.json  engie.json  hidroelectrica.json  suppliers.json  vodafone.json
backend/migrations/: add_extraction_pattern_supplier_migration.sql  add_iban_eur_usd_to_preferences.sql  add_payment_notification_bill_currency_fields.sql  add_property_order_to_preferences.sql  add_referral_system.sql  add_renter_account_fields.sql  add_renter_credit.sql  (+8 more)
(+164 files in other folders)
