[tool.poetry]
name = "promanage-backend"
version = "0.1.0"
description = "Rent and Property Management API"
authors = ["ProManage"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.0"
python-multipart = "^0.0.6"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
pymupdf = "^1.26.7"
sqlalchemy = "^2.0.45"
pymysql = "^1.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
